--- a/src/shared/infra/http/public/index.html
+++ b/src/shared/infra/http/public/index.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
-  <title>Socket Chat</title>
-</head>
-<body>
-  <div class="page" id="loginPage">
-    <h1>Qual o seu nome?</h1>
-    <input type="text" id="loginNameInput"/>
-  </div>
-  <div class="page" id="chatPage">
-      <div class="chatArea">
-        <ul class="chatList">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Socket IO</title>
+  </head>
+  
+  <body>
+    <form action="chat.html">
+      <div class="container">
+        <div class="row">
+          <select name="select_room" id="select_room">
+            <option value="-1">Selecione a sala</option>
+            <option value="node">Node</option>
+            <option value="java">Java</option>
+            <option value="reactjs">ReactJS</option>
+            <option value="elixir">Elixir</option>
+          </select>
+        </div>
 
-        </ul>
-        <ul class="userList">
+        <div class="row">
+          <label class="form-label">Digite seu usuário</label>
+          <input type="text" name="username" placeholder="username"/>
+        </div>
 
-        </ul>
+        <div class="row">
+          <button type="submit" class="btn btn-primary mb-3">Entrar</button>
+        </div>
+
       </div>
-
-      <div class="chatInput">
-        <input type="text" id="chatTextInput" placeholder="Digite uma mensagem e aperte ENTER">
-      </div>
-  </div>
-
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="/mainsocket.js"></script>
-
-</body>
+    </form>
+  </body>
 </html>
