--- a/src/shared/infra/http/messages/public/index.html
+++ b/src/shared/infra/http/messages/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Socket IO</title>
   </head>
-  
+
   <body>
     <form action="chat.html">
       <div class="container">
@@ -29,6 +29,8 @@
         <div class="row">
           <button type="submit" class="btn btn-primary mb-3">Entrar</button>
         </div>
+        <script src="/socket.io/socket.io.js"></script> -->
+        <script src="chat.js"></script>
 
       </div>
     </form>
